--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   file_picker: ^10.1.9
   flutter_tts: ^4.0.2
   speech_to_text: ^7.0.0
-
+  http: ^1.1.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
