--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,5 @@ host=aws-0-ap-southeast-1.pooler.supabase.com
 port=5432
 dbname=postgres
 REDIS_URL=redis://localhost:6379
+JWT_SECRET=JKOb7uA7H7DTP14
+JWT_EXPIRATION_TIME=3600
