--- a/client/web/manifest.json
+++ b/client/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "aol_se",
-    "short_name": "aol_se",
+    "name": "client",
+    "short_name": "client",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
