--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_tts: ^4.0.2
   speech_to_text: ^7.0.0
   http: ^1.1.0
+  animated_text_kit: ^4.2.2
   
 dev_dependencies:
   flutter_test:
@@ -33,3 +34,4 @@ flutter:
     - assets/icons/summary.png
     - assets/icons/translate.png
     - assets/icons/profile.png
+    - assets/icons/voxa_cat.png
