--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   speech_to_text: ^7.0.0
   http: ^1.1.0
   animated_text_kit: ^4.2.2
+  lottie: ^2.2.0
   
 dev_dependencies:
   flutter_test:
@@ -35,3 +36,4 @@ flutter:
     - assets/icons/translate.png
     - assets/icons/profile.png
     - assets/icons/voxa_cat.png
+    - assets/animations/voxa_cat.json
