Added summary and history page

--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -40,3 +40,4 @@ flutter:
     - assets/animations/voxa_cat.json
     - assets/animations/mic.json
     - assets/icons/mic_record.png
+    - assets/animations/loading.json
