--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   lottie: ^2.2.0
   flutter_audio_waveforms: ^1.1.0
   shared_preferences: ^2.2.2
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
