--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   animated_text_kit: ^4.2.2
   lottie: ^2.2.0
   flutter_audio_waveforms: ^1.1.0
+  flutter_sound: ^9.2.13
+  path_provider: ^2.1.1
+  permission_handler: ^11.3.0
+
   
 dev_dependencies:
   flutter_test:
