--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_audio_waveforms: ^1.1.0
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  flutter_dotenv: ^5.0.0
 
 dev_dependencies:
   flutter_test:
